@@ -11,6 +11,11 @@ Improvements:
  - Colors for 256-capable terminals can be specified as colorN.
  - Entering a number in the prompt will jump to that line number.
 
+Bug fixes:
+
+ - Blame view: use line number information when loading blame for
+   specific commit.
+
 tig-0.14
 --------
 
